falta acabar logica

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Exercici1</string>
+    <string name="alerta">Recorda posar el nom a tots els jugadors!</string>
 </resources>
